--- a/index.html
+++ b/index.html
@@ -1,31 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<style type="text/css">
-		body{
-		background-image: url(nike.png), url(a.png),url(b.png);
-		background-position:top right,top left, bottom right;
-		background-size:200px,cover,cover;
-		background-repeat: no-repeat;
-	}
-		.corner{
-			border-image: url(border.png) 25 round;
-		}
-	</style>
-	<title>Brand</title>
+	<title></title>
 </head>
 <body>
-	<p>hello world</p>
-	<p>hello again</p>
-<h1>Super Car Brands</h1>
-<ul>
-	<li><a href="icsu3.html">Home</a></li>
-	<li><a href="brand.html">Brand</a></li>
-	<li><a href="">History</a></li>
-	<li><a href="">Contact</a></li>
-</ul><br>
-<div class="corner">
-	<p>this is my square.</p>
-</div>
+	<h1>ICS2O - April 2021</h1>
+
 </body>
-</html>
+</html>>
